@@ -9,6 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,13 +19,22 @@ public class AuthorServiceImpl implements AuthorService {
     private AuthorRepository repository;
 
     @Override
-    public List<AuthorResponse> getAll() {
-        return repository.findAll().stream().map(this::toResponse).collect(Collectors.toList());
+    public List<AuthorResponse> getAll(String inquiry) {
+        List<Author> authors;
+
+        if (inquiry != null && !inquiry.trim().isEmpty()) {
+            authors = repository.findByNameContainingIgnoreCase(inquiry);
+        } else {
+            authors = repository.findAll();
+        }
+
+        return authors.stream().map(this::toResponse).toList();
     }
 
     @Override
     public AuthorResponse getById(String id) {
-        return repository.findById(id)
+        UUID uuid = UUID.fromString(id);
+        return repository.findById(uuid)
                 .map(this::toResponse)
                 .orElseThrow(() -> new RuntimeException("Author not found"));
     }
@@ -39,7 +49,9 @@ public class AuthorServiceImpl implements AuthorService {
 
     @Override
     public AuthorResponse update(String id, AuthorRequest request) {
-        Author author = repository.findById(id)
+        UUID uuid = UUID.fromString(id);
+
+        Author author = repository.findById(uuid)
                 .orElseThrow(() -> new RuntimeException("Author not found"));
 
         author.setName(request.getName());
@@ -48,14 +60,25 @@ public class AuthorServiceImpl implements AuthorService {
         return toResponse(author);
     }
 
+
     @Override
     public void delete(String id) {
-        repository.deleteById(id);
+        UUID uuid = UUID.fromString(id);
+        repository.deleteById(uuid);
     }
+
+    public void bulkDelete(List<String> ids) {
+        List<UUID> uuidList = ids.stream()
+                .map(UUID::fromString)
+                .collect(Collectors.toList());
+
+        repository.deleteAllById(uuidList);
+    }
+
 
     private AuthorResponse toResponse(Author author) {
         AuthorResponse response = new AuthorResponse();
-        response.setId(author.getId());
+        response.setId(author.getId().toString());
         response.setName(author.getName());
         return response;
     }
