@@ -1,6 +1,7 @@
 package com.example.library.service.impl;
 
 import com.example.library.model.request.BookRequest;
+import com.example.library.model.response.AuthorResponse;
 import com.example.library.model.response.BookResponse;
 import com.example.library.persistence.entity.Author;
 import com.example.library.persistence.entity.Book;
@@ -11,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,20 +25,30 @@ public class BookServiceImpl implements BookService {
     private AuthorRepository authorRepo;
 
     @Override
-    public List<BookResponse> getAll() {
-        return bookRepo.findAll().stream().map(this::toResponse).collect(Collectors.toList());
+    public List<BookResponse> getAll(String inquiry) {
+        List<Book> books;
+
+        if (inquiry != null && !inquiry.trim().isEmpty()) {
+            books = bookRepo.findByTitleContainingIgnoreCase(inquiry);
+        } else {
+            books = bookRepo.findAll();
+        }
+
+        return books.stream().map(this::toResponse).toList();
     }
 
     @Override
     public BookResponse getById(String id) {
-        return bookRepo.findById(id)
+
+        return bookRepo.findById(UUID.fromString(id))
                 .map(this::toResponse)
                 .orElseThrow(() -> new RuntimeException("Book not found"));
     }
 
     @Override
     public BookResponse create(BookRequest request) {
-        Author author = authorRepo.findById(request.getAuthorId())
+        UUID uuid = UUID.fromString(request.getAuthorId());
+        Author author = authorRepo.findById(uuid)
                 .orElseThrow(() -> new RuntimeException("Author not found"));
 
         Book book = new Book();
@@ -51,10 +63,10 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public BookResponse update(String id, BookRequest request) {
-        Book book = bookRepo.findById(id)
+        Book book = bookRepo.findById(UUID.fromString(id))
                 .orElseThrow(() -> new RuntimeException("Book not found"));
-
-        Author author = authorRepo.findById(request.getAuthorId())
+        UUID uuid = UUID.fromString(request.getAuthorId());
+        Author author = authorRepo.findById(uuid)
                 .orElseThrow(() -> new RuntimeException("Author not found"));
 
         book.setTitle(request.getTitle());
@@ -68,16 +80,16 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public void delete(String id) {
-        bookRepo.deleteById(id);
+        bookRepo.deleteById(UUID.fromString(id));
     }
 
     private BookResponse toResponse(Book book) {
         BookResponse response = new BookResponse();
-        response.setId(book.getId());
+        response.setId(book.getId().toString());
         response.setTitle(book.getTitle());
         response.setCategory(book.getCategory());
         response.setPublishingYear(book.getPublishingYear());
-        response.setAuthorId(book.getAuthor().getId());
+        response.setAuthorId(book.getAuthor().getId().toString());
         response.setAuthorName(book.getAuthor().getName());
         return response;
     }
